--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="intro">
 								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
 								<header>
-									<h2>Cultive ta com'</h2>
+                                  <h2>Cultive</h2></br><h2>ta com'</h2>
 									<p>Le blog qui sème ses idées librement</p>
 								</header>
 							</section>
